# hb

./: .gitignore  .justfile  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  deny.toml  dist-workspace.toml
.github/: custom-release-steps.yaml
.github/workflows/: client-container.yaml  container.yaml  dashboard-container.yaml  hb-container.yaml  release.yml  test-container.yaml  test.yaml
client/: .justfile  CHANGELOG.md  Cargo.toml  Dockerfile
client/assets/otel/: config.yaml
client/assets/prometheus/: prometheus.yml
client/src/: bench.rs  http.rs  lib.rs  otlp.rs  stats.rs  time.rs
client/src/reporter/: components.rs  exporter.rs  formatter.rs  metrics.rs  mod.rs
controller/: Cargo.toml
dashboard/: .justfile  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs
dashboard/example/: README.md
dashboard/example/perses-docker/: docker-compose.yml
dashboard/example/perses-docker/assets/: config.yaml
dashboard/example/perses-kubernetes/: Chart.yaml  values.yaml
dashboard/example/perses-kubernetes/assets/provisioning/: dashboard.yaml  project.yaml
dashboard/example/perses-kubernetes/templates/: datasouce.yaml
dashboard/example/prometheus-kubernetes/: kustomization.yaml  statefulset.yaml
dashboard/example/prometheus-kubernetes/assets/: prometheus.yml
dashboard/frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
dashboard/frontend/src/: App.svelte
dashboard/frontend/src/lib/: prometheus.ts  time.ts
dashboard/frontend/src/lib/components/: EchartsLineChart.svelte  Header.svelte  TotalCount.svelte
dashboard/simple/: .gitignore  Dockerfile  README.md  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json
dashboard/simple/public/: config.js
dashboard/simple/src/: App.svelte  app.css
dashboard/simple/src/lib/: prometheus.ts
dashboard/simple/src/lib/components/: EchartsLineChart.svelte  Header.svelte  Sidebar.svelte  TotalCount.svelte
dashboard/src/: args.rs  main.rs  server.rs  url.rs
devops/: .justfile  Cargo.toml  docker-compose.yml  kind.yaml
devops/assets/perses/: config.yaml
devops/assets/perses/data/: prometheus-datasource.yaml
manifests/docker/assets/provisioning/: datasource.yaml
manifests/kubernetes/: kustomization.yaml  perses.yaml  prometheus.yaml
manifests/kubernetes/assets/provisioning/: datasource.yaml
scripts/: pre-release-hook.sh
