[workspace]

members = ["controller", "client"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Wataru Matsui <watawuwu@3bi.tech>"]
readme = "README.md"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "HTTP Benchmark Tool"
repository = "https://github.com/watawuwu/hb"
keywords = [
    "http",
    "benchmark",
    "command-line-utilities",
    "load-testing",
    "stress-testing",
]
categories = ["command-line-utilities"]
homepage = "https://github.com/watawuwu/hb"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
