[package]
name = "hb"
version = "0.6.1"
authors.workspace = true
readme.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true

[dependencies]
reqwest = { version = "0", default-features = false, features = [
    "charset",
    "http2",
    "macos-system-configuration",
    "json",
    "rustls-tls",
] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
log = "0"
clap = { version = "4", features = ["derive", "env"] }
url = "2"
strum = { version = "0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
prometheus-client = "0.23"
opentelemetry = "0.28"
opentelemetry-otlp = { version = "0.28", default-features = false, features = [
    "reqwest-rustls",
    "reqwest-client",
    "http-proto",
    "http-json",
    "grpc-tonic",
] }
opentelemetry_sdk = { version = "0.28", features = [
    "rt-tokio",
    "experimental_metrics_periodicreader_with_async_runtime",
] }
opentelemetry-stdout = "0.28"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-serde = "0.2"
tokio-util = { version = "0", features = ["rt"] }
console-subscriber = "0.4"
tracing = "0.1"
# for test binary
tabled = "0.18"
hyper = { version = "1.5", features = ["full"] }
pin-project-lite = "0.2"
http-body-util = "0.1"
bytes = "1.9"
uuid = { version = "1.11", features = ["v5"] }
regex = "1.11"
async-trait = "0.1"
rand = "0.9"
hyper-util = "0.1"
futures = "0.3"
itertools = "0.14"
rand_chacha = "0.9"
atomic_float = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossterm = "0.28"

[dev-dependencies]
mockito = "1.2"

[[bin]]
name = "hb"
path = "src/bin/main.rs"
