[package]
name = "hb-dashboard"
version = "0.1.1"
authors.workspace = true
readme.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true

[dependencies]
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
rand = "0.9"
rand_chacha = "0.9"
http-body-util = "0.1"
axum = { version = "0.8", features = ["macros"] }
percent-encoding = "2"
serde = { version = "1", features = ["derive"] }
tower-http = { version = "0.6", features = ["fs"] }
url = "2"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
axum-macros = "0.5"
urlencoding = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
axum-extra = "0.10"
axum-server = { version = "0.7", features = ["tls-rustls"] }

[dev-dependencies]
mockito = "1.7.0"
