[package]
name = "devops"
version = "0.1.0"
authors.workspace = true
readme.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true

[dependencies]
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
rand = "0.9"
rand_chacha = "0.9"
http-body-util = "0.1"
